added userId and productName
