# internal/repository/api.go
@@ -9,6 +9,8 @@ type Order struct {
 	PostalCode string  `json:"postalCode"`
 	Town string  `json:"town"`
 	Total     float64 `json:"total"`
+	UserId string `json:"userId"`
+	ProductName string `json:"producName"`
 }
 
 // OrderRepository interface defines the basic operations needed for the order service
